tests/sources/invalid/classes/new_unknown_type.fire
// Parser error: 'new' constructor call with a type name that was never
// declared as a class.

fn new_unknown_type() -> void {
    b = new Bogus(5);  //~ ERROR FS-PARSE-0012 @13
//~^ ERROR FS-SEM-0010 @13
//~^^ ERROR FS-PARSE-0003 @5
}
